# MagSuite

./: .dockerignore  .env.example  .env.test  .gitignore  AI_WORKFLOW_GUIDELINES.md  BACKUP_UNIFICATION_PLAN.md  CLEANUP_INSTRUCTIONS.md  COMPREHENSIVE_VERIFICATION_REPORT.md  CORRECTIONS_APPLIED.md  DATABASE_INDEXES_FIX.md  DEPLOY_FIX.md  EMERGENCY_DEPLOY_STRATEGY.md  EMERGENCY_FIX_README.md  INDEXES_STRATEGY.md  LICENSE  PERFORMANCE_OPTIMIZATIONS.md  PROJECT_INSTRUCTIONS.md  README.md  RENDER_VERIFICATION_REPORT.md  ROADMAP.md  SUPABASE_MCP_CONTROL_REPORT.md  TESTSPRITE_USAGE_GUIDE.md  VERIFICATION_REPORT.md  VERIFICATION_SUMMARY.md  WORKFLOW_IMPLEMENTED.md  WORKFLOW_RULE.md  audit-report.txt  docker-compose.yml  package-lock.json  pyproject.toml  render.env.example  render.yaml  start.sh  tatus  tatus --porcelain  tmp1.txt  tmp2.txt  tmp_Auth.vue  tmp_package.json.txt  tmp_users_vue.txt  (+1 more)
.cursor/: mcp.json
backend/: .cursor-mcp.json  .eslintrc.json  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_TOOLS.md  Dockerfile  MCP_SETUP_COMPLETE.md  MCP_USAGE_GUIDE.md  auth.test.js  bp.test.js  company-auth-required.test.js  company-isolation.test.js  db-session-isolation.test.js  deploy-config.example  deploy-env-template.txt  documents.test.js  export-multitenant.test.js  fix-company-id.js  imports-items.test.js  inventory.test.js  items.test.js  jest.global-setup.js  jest.setup.js  labels.test.js  logs.test.js  mrp-suggestions.test.js  operations.test.js  package-lock.json  package.json  purchase-orders.test.js  reports.test.js  sequences-causals.test.js  server.js  server.js.bak  (+6 more)
(+270 files in other folders)
