[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magsuite"
version = "0.0.0"
description = "Minimal MagSuite example package"
requires-python = ">=3.8"
dependencies = ["openpyxl"]

[project.scripts]
magsuite = "magsuite.cli:main"

[tool.setuptools.packages.find]
include = ["magsuite*"]
